# C-programming-challenges

./: CMakeLists.txt  main.cpp
Chapter 3 Expression and Interactivity/: sales_prediction.cpp  sales_prediction.h
chapter 2 Introduction To c++/: solution.cpp  solution.h  sum_of_two_numbers.cpp  sum_of_two_numbers.h
