cmake_minimum_required(VERSION 3.23)
project(programming_challenges_solution)

set(CMAKE_CXX_STANDARD 11)

add_executable(programming_challenges_solution "chapter 2 Introduction To c++/sum_of_two_numbers.cpp" "Chapter 3 Expression and Interactivity/sales_prediction.cpp" main.cpp "chapter 2 Introduction To c++/sum_of_two_numbers.h" "Chapter 3 Expression and Interactivity/sales_prediction.h")
